<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:padding="10dp"
    android:orientation="vertical"
    android:background="#D7D9C5"
    android:layout_height="wrap_content">

    <ImageView
        android:background="@drawable/ic_launcher_background"
        android:src="@drawable/ic_launcher_foreground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo" />
    <TextView
        android:textStyle="bold"
        android:textSize="22sp"
        android:text="@string/android_studio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:textStyle="normal"
        android:textSize="18sp"
        android:text="@string/developed_by_google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>